--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,10 +5,39 @@
 	padding: 0;
 }
 
+html {
+	--s: 50px;
+	--c: #1e1f20;
+	--_s: calc(2*var(--s)) calc(2*var(--s));
+	--_g: 35.36% 35.36% at;
+	--_c: #0000 66%,#303030 68% 70%,#0000 72%;
+	background: 
+	  radial-gradient(var(--_g) 100% 25%,var(--_c)) var(--s) var(--s)/var(--_s), 
+	  radial-gradient(var(--_g) 0 75%,var(--_c)) var(--s) var(--s)/var(--_s), 
+	  radial-gradient(var(--_g) 100% 25%,var(--_c)) 0 0/var(--_s), 
+	  radial-gradient(var(--_g) 0 75%,var(--_c)) 0 0/var(--_s), 
+	  repeating-conic-gradient(var(--c) 0 25%,#0000 0 50%) 0 0/var(--_s), 
+	  radial-gradient(var(--_c)) 0 calc(var(--s)/2)/var(--s) var(--s) var(--c);
+	background-attachment: fixed;
+}
+
 body {
 	font-family: "Exo", sans-serif;
 	font-size: 16px;
 	margin: 20px;
+	--s: 50px;
+	--c: #1e1f20;
+	--_s: calc(2*var(--s)) calc(2*var(--s));
+	--_g: 35.36% 35.36% at;
+	--_c: #0000 66%,#303030 68% 70%,#0000 72%;
+	background: 
+	  radial-gradient(var(--_g) 100% 25%,var(--_c)) var(--s) var(--s)/var(--_s), 
+	  radial-gradient(var(--_g) 0 75%,var(--_c)) var(--s) var(--s)/var(--_s), 
+	  radial-gradient(var(--_g) 100% 25%,var(--_c)) 0 0/var(--_s), 
+	  radial-gradient(var(--_g) 0 75%,var(--_c)) 0 0/var(--_s), 
+	  repeating-conic-gradient(var(--c) 0 25%,#0000 0 50%) 0 0/var(--_s), 
+	  radial-gradient(var(--_c)) 0 calc(var(--s)/2)/var(--s) var(--s) var(--c);
+	background-attachment: fixed;
 }
 
 ul {
@@ -41,6 +70,7 @@ a {
 	background-color: #000000;
 	color: #ffffff;
 	padding: 15px;
+	padding-bottom: 40px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -68,6 +98,20 @@ a {
 
 .chat-sidebar h3 {
 	margin-bottom: 15px;
+}
+
+.chat-sidebar h3 img {
+	position: relative;
+	top: 5px;
+}
+
+.chat-sidebar h4 {
+	margin-bottom: 15px;
+	font-size: 19px;
+}
+.chat-sidebar h4 img {
+	position: relative;
+	top: 3px;
 }
 
 .chat-sidebar ul li {
@@ -122,6 +166,16 @@ a {
 	flex: 1;
 }
 
+#leave-btn {
+	position: relative;
+	top: 10px;
+	padding-left: 25px;
+  	padding-right: 25px;
+  	padding-top: 10px;
+  	padding-bottom: 10px;
+	font-size: 18px;
+}
+
 /* Join Page */
 body {
 	background-color: #202020;
@@ -135,8 +189,15 @@ body {
 
 .join-header {
 	text-align: center;
-	padding: 20px;
+	padding: 10px;
+	padding-bottom: 35px;
 	background-color: black;
+	font-size: 24px;
+}
+
+h1 {
+	width: 560px;
+	height: 60px;
 }
 
 .join-main {
@@ -207,7 +268,6 @@ body {
 #typing-indicator {
 	position: relative;
   	width: 270px;
-  	height: 2;
     padding: 10px;
     font-size: 15px;
     color: #000000;
@@ -233,4 +293,11 @@ body {
   height: 12;
   position: relative;
   overflow: visible;
+}
+
+img {
+	max-width: 10%;
+	height: auto;
+	position: relative;
+	top: 15px;
 }
